(fix) Lakes Alalay and Albarrancho show correctly
They were set to fill "invisible"

--- a/style.css
+++ b/style.css
@@ -126,6 +126,10 @@ body {
   stroke: var(--color-orange);
 }
 
+#cercado-svg-lagunas path {
+  fill: var(--color-lightblue);
+}
+
 /*
 #cercado-map-container path {
   stroke: var(--color-grey);
